--- a/mission.html
+++ b/mission.html
@@ -156,18 +156,7 @@
 
     <main>
       <div class="container col-xxl-8 px-4 py-3 my-3">
-        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-          <div class="col-10 col-sm-8 col-lg-6">
-            <img
-              src="./images/listening.jpg"
-              class="d-block mx-lg-auto img-fluid"
-              alt="Bootstrap Themes"
-              width="700"
-              height="500"
-              loading="lazy"
-              id="listening-img"
-            />
-          </div>
+        <div class="row flex-lg-row align-items-center g-5 py-5">
           <div class="col-lg-6">
             <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">
               Why PDF to Podcast?
@@ -200,6 +189,17 @@
                 </button>
               </a>
             </div>
+          </div>
+          <div class="col-10 col-sm-8 col-lg-6">
+            <img
+              src="./images/listening.jpg"
+              class="d-block mx-lg-auto img-fluid"
+              alt="Bootstrap Themes"
+              width="700"
+              height="500"
+              loading="lazy"
+              id="listening-img"
+            />
           </div>
         </div>
       </div>
